fix(-): phone number validation

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -84,7 +84,8 @@
       "REQUIRED": "{{field}} is required",
       "INVALID": "{{field}} is invalid",
       "MIN_LENGTH": "{{field}} must be at least {{length}} characters",
-      "INVALID_URL": "Invalid URL"
+      "INVALID_URL": "Invalid URL",
+      "INVALID_NUMBER": "Phone number must start with '+' and contain only numbers, spaces, and hyphens"
     },
     "PREVIOUS": "Previous",
     "NEXT": "Next",
