feat(-): single input for adding skills

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -99,6 +99,7 @@
         "TITLE": "Skills",
         "ITEM": "Skill #",
         "FIELDS": {
+          "ADD_SKILL": "Add skill",
           "NAME": "Name",
           "NAME_PLACEHOLDER": "Skill name",
           "LEVEL": "Level",
