--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -174,6 +174,10 @@
         }
       }
     },
+    "TOASTS": {
+      "SUCCESS": "Your resume has been generated!",
+      "ERROR": "Error generating your resume"
+    },
     "ERRORS": {
       "REQUIRED": "{{field}} is required",
       "INVALID": "{{field}} is invalid",
