feat(-): footer dynamic year

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -24,7 +24,7 @@
     }
   },
   "FOOTER": {
-    "COPYRIGHT": "© 2025 Reshume. All rights reserved.",
+    "COPYRIGHT": "Reshume. All rights reserved.",
     "LINKS": {
       "CONTRIBUTE": "Contribute",
       "DONATE": "Donate"
