--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -24,7 +24,7 @@
     }
   },
   "FOOTER": {
-    "COPYRIGHT": "© 2025 Reshume. Todos los derechos reservados.",
+    "COPYRIGHT": "Reshume. Todos los derechos reservados.",
     "LINKS": {
       "CONTRIBUTE": "Contribuir",
       "DONATE": "Donar"
